fix: discard on mobile (#1107)

--- a/packages/core/src/components/entry-editor/EditorToolbar.css
+++ b/packages/core/src/components/entry-editor/EditorToolbar.css
@@ -22,6 +22,11 @@
     lg:!hidden;
 }
 
+.CMS_EditorToolbar_discard-button {
+  @apply flex
+    lg:!hidden;
+}
+
 .CMS_EditorToolbar_delete-button {
   @apply flex
     lg:!hidden;
